# web_server

./: .flake8  .gitignore  README.md  constants.py  main.py  pyproject.toml  responses.py
.github/workflows/: python-publish.yml
www/: index.html
